--- a/src/main/resources/calc/calculadora/middlewareWindow.fxml
+++ b/src/main/resources/calc/calculadora/middlewareWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="300.0" prefWidth="260.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.calculadora.MiddlewareController">
-   <Label layoutX="60.0" layoutY="10.0" prefHeight="17.0" prefWidth="139.0" text="Middleware" textAlignment="CENTER">
+   <Label fx:id="nodeName" layoutX="60.0" layoutY="10.0" prefHeight="17.0" prefWidth="139.0" text="Middleware" textAlignment="CENTER">
       <font>
          <Font name="Century Gothic" size="24.0" />
       </font>
