--- a/src/main/resources/calc/calculadora/calculatorWindow.fxml
+++ b/src/main/resources/calc/calculadora/calculatorWindow.fxml
@@ -8,106 +8,111 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="512.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.calculadora.ClientController">
-   <TextArea fx:id="calcLog" editable="false" layoutX="229.0" layoutY="25.0" prefHeight="235.0" prefWidth="268.0" style="-fx-border-color: #0071DC; -fx-border-width: 2; -fx-background-color: #FFFFFF;" wrapText="true">
+   <TextArea fx:id="calcLog" editable="false" layoutX="229.0" layoutY="25.0" prefHeight="235.0" prefWidth="268.0" style="-fx-border-color: #0071DC; -fx-background-color: #FFFFFF;" wrapText="true">
       <font>
          <Font name="Century Gothic" size="11.0" />
       </font></TextArea>
-   <Button layoutX="284.0" layoutY="276.0" mnemonicParsing="false" onAction="#clearLog" prefHeight="39.0" prefWidth="157.0" style="-fx-background-color: #0071DC;" text="CLEAR LOG" textFill="WHITE">
+   <Button layoutX="244.0" layoutY="280.0" mnemonicParsing="false" onAction="#clearLog" prefHeight="32.0" prefWidth="113.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="CLEAR LOG" textFill="WHITE">
       <font>
-         <Font name="Century Gothic Bold" size="18.0" />
+         <Font name="Century Gothic" size="14.0" />
       </font>
    </Button>
-   <Button layoutX="16.0" layoutY="73.0" mnemonicParsing="false" onAction="#clearOutput" prefHeight="40.0" prefWidth="142.0" style="-fx-background-color: #0071DC;" text="AC" textFill="WHITE">
+   <Button layoutX="16.0" layoutY="73.0" mnemonicParsing="false" onAction="#clearOutput" prefHeight="40.0" prefWidth="142.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="AC" textFill="WHITE">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="17.0" layoutY="123.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="7" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="17.0" layoutY="123.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="7" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="67.0" layoutY="123.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="8" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="67.0" layoutY="123.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="8" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="117.0" layoutY="123.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="9" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="117.0" layoutY="123.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="9" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="17.0" layoutY="174.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="4" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="17.0" layoutY="174.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="4" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="67.0" layoutY="174.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="5" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="67.0" layoutY="174.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="5" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="117.0" layoutY="174.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="6" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="117.0" layoutY="174.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="6" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="17.0" layoutY="225.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="1" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="17.0" layoutY="225.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="1" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="67.0" layoutY="225.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="2" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="67.0" layoutY="225.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="2" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" layoutX="117.0" layoutY="225.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="3" textFill="#0071dc">
+   <Button alignment="CENTER" layoutX="117.0" layoutY="225.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="3" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="123.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC;" text="⨉" textFill="WHITE">
+   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="123.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="⨉" textFill="WHITE">
       <font>
          <Font name="Century Gothic Bold" size="14.0" />
       </font>
    </Button>
-   <Button alignment="BASELINE_LEFT" layoutX="19.0" layoutY="276.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="88.0" style="-fx-background-color: #FFFFFF; -fx-label-padding: 3; -fx-border-color: #0071DC; -fx-border-width: 2;" text="0" textFill="#0071dc">
+   <Button alignment="BASELINE_LEFT" layoutX="19.0" layoutY="276.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="88.0" style="-fx-background-color: #FFFFFF; -fx-label-padding: 0 0 0 5; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="0" textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Label fx:id="output" alignment="BOTTOM_RIGHT" layoutX="14.0" layoutY="16.0" prefHeight="39.0" prefWidth="193.0" style="-fx-border-color: #0071DC; -fx-border-width: 2; -fx-padding: 0 10 0 0;" text="0.0" textFill="#0071dc">
+   <Label fx:id="output" alignment="BOTTOM_RIGHT" layoutX="14.0" layoutY="17.0" prefHeight="39.0" prefWidth="193.0" style="-fx-padding: 0 10 0 0;" text="0.0" textFill="#0071dc">
       <padding>
          <Insets bottom="10.0" />
       </padding>
       <font>
-         <Font name="Century Gothic Bold" size="30.0" />
+         <Font name="Century Gothic" size="30.0" />
       </font>
    </Label>
-   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="117.0" layoutY="276.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" text="." textFill="#0071dc">
+   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="117.0" layoutY="276.0" mnemonicParsing="false" onAction="#processNumPad" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="." textFill="#0071dc">
       <font>
-         <Font name="Century Gothic Bold" size="17.0" />
+         <Font name="Century Gothic" size="17.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="73.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC;" text="÷" textFill="WHITE">
+   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="73.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="÷" textFill="WHITE">
       <font>
          <Font name="Century Gothic" size="20.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="174.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC; -fx-padding: 0 0 5 0;" text="-" textFill="WHITE">
+   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="174.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC; -fx-padding: 0 0 3 0; -fx-background-radius: 20;" text="-" textFill="WHITE">
       <font>
          <Font name="Century Gothic" size="24.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="225.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC;" text="+" textFill="WHITE">
+   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="225.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="+" textFill="WHITE">
       <font>
          <Font name="Century Gothic" size="20.0" />
       </font>
    </Button>
-   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="276.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC;" text="=" textFill="WHITE">
+   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="276.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#processOperator" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="=" textFill="WHITE">
       <font>
          <Font name="Century Gothic" size="20.0" />
+      </font>
+   </Button>
+   <Button fx:id="closeButton" layoutX="368.0" layoutY="280.0" mnemonicParsing="false" onAction="#exit" prefHeight="32.0" prefWidth="113.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="EXIT" textFill="#0071dc">
+      <font>
+         <Font name="Century Gothic" size="14.0" />
       </font>
    </Button>
 </AnchorPane>
