--- a/src/main/resources/calc/calculadora/serverWindow.fxml
+++ b/src/main/resources/calc/calculadora/serverWindow.fxml
@@ -7,19 +7,24 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="300.0" prefWidth="283.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.calculadora.ServerController">
-   <Label fx:id="serverLabel" layoutX="75.0" layoutY="14.0" prefHeight="31.0" prefWidth="133.0" style="-fx-font-weight: bold;" text="Server 7000" textFill="#0071dc">
+   <Label fx:id="serverLabel" layoutX="75.0" layoutY="14.0" prefHeight="31.0" prefWidth="133.0" text="Server 7000" textFill="#0071dc">
       <font>
          <Font name="Century Gothic" size="24.0" />
       </font>
    </Label>
-   <TextArea fx:id="calcLog" editable="false" layoutX="13.0" layoutY="56.0" prefHeight="187.0" prefWidth="258.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC; -fx-border-width: 2;" wrapText="true">
+   <TextArea fx:id="calcLog" editable="false" layoutX="13.0" layoutY="56.0" prefHeight="187.0" prefWidth="258.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #0071DC;" wrapText="true">
       <font>
          <Font name="Century Gothic" size="11.0" />
       </font>
    </TextArea>
-   <Button layoutX="90.0" layoutY="256.0" mnemonicParsing="false" onAction="#clearLog" prefHeight="31.0" prefWidth="103.0" style="-fx-border-color: #0071DC; -fx-background-color: #0071DC; -fx-border-width: 2;" text="CLEAR LOG" textAlignment="CENTER" textFill="WHITE">
+   <Button layoutX="33.0" layoutY="254.0" mnemonicParsing="false" onAction="#clearLog" prefHeight="31.0" prefWidth="103.0" style="-fx-background-color: #0071DC; -fx-background-radius: 20;" text="CLEAR LOG" textAlignment="CENTER" textFill="WHITE">
       <font>
-         <Font name="Century Gothic Bold" size="14.0" />
+         <Font name="Century Gothic" size="14.0" />
+      </font>
+   </Button>
+   <Button fx:id="closeButton" layoutX="147.0" layoutY="254.0" mnemonicParsing="false" onAction="#closeServer" prefHeight="31.0" prefWidth="103.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20; -fx-border-color: #0071DC; -fx-border-radius: 20;" text="EXIT" textAlignment="CENTER" textFill="#0071dc">
+      <font>
+         <Font name="Century Gothic" size="14.0" />
       </font>
    </Button>
 </AnchorPane>
